Add githut workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,3 +15,7 @@ jobs:
         with:
           command: build
           args: --release
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: target/release/evt2kafka.exe
