--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,3 +19,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: target/release/evt2kafka.exe
+          tag_name: latest
